[package]
name = "asyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = { version = "0.13.0" } 
#path = "../clone/fundsp"
funutd = "0.11.0"
cpal = "0.15.2"
numeric-array = { version = "0.5.2", default-features = false }

# [dev-dependencies]
